--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": ">=17.0.0",
@@ -42,7 +41,7 @@
     "type": "git",
     "url": "https://github.com/traval27/react-teeth-selector.git"
   },
-  "homepage": "https://traval27.github.io/react-teeth-selector-demo",
+  "homepage": "https://github.com/traval27/react-teeth-selector#readme",
   "bugs": {
     "url": "https://github.com/traval27/react-teeth-selector/issues"
   },
